# Fitness-API-pet

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  models.py  pyproject.toml
.github/workflows/: lint.yml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/middleware/: __init__.py  logging_middleware.py
app/api/routers/: __init__.py  auth.py  stats.py  workouts.py
app/core/: config.py  database.py  logging_config.py  redis.py  security.py
app/models/: jwt_tokens.py  refresh_token.py  user.py  workout.py
app/repositories/: __init__.py  auth_repository.py  jwt_tokens_repository.py  stats_repository.py  user_repository.py  workout_repository.py
app/schemas/: stats.py  user.py  workout.py
app/security/: cookie_utils.py  create_access_token.py  create_jwt_token.py  get_user_id_by_token.py  hash_password.py  password.py  token.py
app/services/: auth_service.py  jwt_tokens_service.py  stats_service.py  user_service.py  workout_service.py
app/utils/: __init__.py  date_utils.py  db_decorator.py
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/middleware/: __init__.py  logging_middleware.py
backend/app/api/routers/: __init__.py  auth.py  stats.py
backend/app/core/: config.py  database.py  logging_config.py  redis.py
backend/app/models/: jwt_token_record.py  user.py  workout.py
backend/app/repositories/: auth_repository.py  jwt_tokens_repository.py  user_repository.py  workout_repository.py
backend/app/security/: cookie_utils.py  token.py
backend/app/services/: jwt_tokens_service.py  stats_service.py  user_service.py  workout_service.py
backend/app/utils/: date_utils.py
frontend/: README.md  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/src/app/: layout.tsx  store.ts
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/pages/: _app.tsx  _document.tsx  login.tsx  register.tsx  workouts.tsx
frontend/src/pages/workouts/: new.tsx
frontend/src/processes/auth-flow/: index.ts
frontend/src/processes/workout-session/: index.ts
frontend/src/shared/api/: authApi.ts  baseApi.ts  index.ts
frontend/src/shared/config/: index.ts
frontend/src/shared/lib/: index.ts  validation.ts
frontend/src/shared/types/: index.ts
frontend/src/shared/ui/: index.ts
helpers/: filters.py
(+41 files in other folders)
