[project]
name = "fitness-api-pet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.125.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "PyJWT>=2.8.0",
    "sqlmodel>=0.0.24",
    "pydantic-settings>=2.6.1",
]

[tool.uv.workspace]
members = [
    "fitness-api",
]
